[gd_scene load_steps=8 format=3 uid="uid://bmlw1nxt62n7b"]

[ext_resource type="Script" uid="uid://d0wfy4dxslkqu" path="res://LaserBeam.gd" id="1_dqaer"]
[ext_resource type="Texture2D" uid="uid://jub4b4je51y" path="res://entities/burger_boss/lazer_beam_circle.png" id="2_ni8j5"]

[sub_resource type="Curve" id="Curve_sr12g"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.14689265, 1), 0.0, 0.0, 0, 0, Vector2(0.85310733, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_assbw"]
curve = SubResource("Curve_sr12g")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bd3iy"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 5.0
initial_velocity_max = 15.0
angular_velocity_min = -45.000015
angular_velocity_max = 44.999985
gravity = Vector3(0, 4, 0)
scale_min = 0.099999994
scale_max = 0.25
color = Color(0, 1, 1, 1)
alpha_curve = SubResource("CurveTexture_assbw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qwbgx"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 5.0
initial_velocity_max = 15.0
angular_velocity_min = -45.000015
angular_velocity_max = 44.999985
gravity = Vector3(0, 4, 0)
scale_min = 0.19999999
scale_max = 0.39999998
color = Color(0, 1, 1, 1)
alpha_curve = SubResource("CurveTexture_assbw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sgvm5"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(125, 2, 1)
spread = 180.0
initial_velocity_min = 5.0
initial_velocity_max = 15.0
angular_velocity_min = -45.000015
angular_velocity_max = 44.999985
gravity = Vector3(0, 4, 0)
scale_min = 0.099999994
scale_max = 0.25
color = Color(0, 1, 1, 1)
alpha_curve = SubResource("CurveTexture_assbw")

[node name="LaserBeam" type="Line2D"]
z_index = 1
position = Vector2(10, -7)
rotation = 0.0002516626
points = PackedVector2Array(0, 0, 250, 0)
width = 4.0
default_color = Color(0, 18.892157, 18.892157, 1)
script = ExtResource("1_dqaer")

[node name="LazerStart" type="GPUParticles2D" parent="."]
z_index = 1
position = Vector2(3, 0.0010819435)
rotation = 0.00036063642
amount = 24
texture = ExtResource("2_ni8j5")
lifetime = 0.4
process_material = SubResource("ParticleProcessMaterial_bd3iy")

[node name="LazerEnd" type="GPUParticles2D" parent="."]
z_index = 1
position = Vector2(247.99998, 0.08943796)
rotation = 0.00036063642
amount = 24
texture = ExtResource("2_ni8j5")
lifetime = 0.4
process_material = SubResource("ParticleProcessMaterial_qwbgx")

[node name="LazerLine" type="GPUParticles2D" parent="."]
z_index = 1
position = Vector2(124.999985, 0.045079585)
rotation = 0.00036063642
amount = 12
texture = ExtResource("2_ni8j5")
lifetime = 0.8
process_material = SubResource("ParticleProcessMaterial_sgvm5")
